kubernetes-networks/canary/web-new-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-new-svc
spec:
  selector:
    app: web-new
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
